--- a/index.html
+++ b/index.html
@@ -4,18 +4,61 @@
     <title>El tiempo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style/main.css">
   </head>
   <body>
     <header>
+      <h1>El Tiempo</h1>
     </header>
-    <div id="today">
+    <div id="forecast-today">
+      <div class="forecast-icon">
+        <p>🌞</p>
+      </div>
+      <div class="forecast-text">
+        <p class="forecast-temperature">10/15ºC</p>
+        <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+      </div>
     </div>
-    <ul id="5-day">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>      
+    <ul id="forecast-5-day">
+      <li>
+        <div class="forecast-icon">
+          <p>🌞</p>
+        </div>
+        <div class="forecast-text">
+          <p class="forecast-temperature">10/15ºC</p>
+          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+        </div>
+      </li>
+      <li>
+        <div class="forecast-icon">
+          <p>⛅</p>
+        </div>
+        <div class="forecast-text">
+          <p class="forecast-temperature">10/15ºC</p>
+          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+        </div>
+      </li>
+      <li>
+        <div class="forecast-icon">
+          <p>🌤</p>
+        </div>
+        <div class="forecast-text">
+          <p class="forecast-temperature">10/15ºC</p>
+          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+        </div>
+      </li>
+      <li>
+        <div class="forecast-icon">
+          <p>🌦</p>
+        </div>
+        <div class="forecast-text">
+          <p class="forecast-temperature">10/15ºC</p>
+          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+        </div>
+      </li>
     </ul>
+    <div id="location">
+      <p>Salamanca</p>
+    </div>
   </body>
 </html>
