--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style/main.css">
+    <script src="script/main.js"></script>
   </head>
   <body>
     <header>
@@ -12,7 +13,7 @@
     </header>
     <div id="forecast-today">
       <div class="forecast-icon">
-        <p>🌞</p>
+        <p>🌁</p>
       </div>
       <div class="forecast-text">
         <p class="forecast-temperature">10/15ºC</p>
