Add refresh button

--- a/index.html
+++ b/index.html
@@ -13,53 +13,54 @@
     </header>
     <div id="forecast-today">
       <div class="forecast-icon">
-        <p>🌁</p>
+        <p></p>
       </div>
       <div class="forecast-text">
-        <p class="forecast-temperature">10/15ºC</p>
-        <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+        <p class="forecast-temperature"></p>
+        <p class="forecast-day"></p>
       </div>
     </div>
     <ul id="forecast-5-day">
       <li>
         <div class="forecast-icon">
-          <p>🌞</p>
+          <p></p>
         </div>
         <div class="forecast-text">
-          <p class="forecast-temperature">10/15ºC</p>
-          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+          <p class="forecast-temperature"></p>
+          <p class="forecast-day"></p>
         </div>
       </li>
       <li>
         <div class="forecast-icon">
-          <p>⛅</p>
+          <p></p>
         </div>
         <div class="forecast-text">
-          <p class="forecast-temperature">10/15ºC</p>
-          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+          <p class="forecast-temperature"></p>
+          <p class="forecast-day"></p>
         </div>
       </li>
       <li>
         <div class="forecast-icon">
-          <p>🌤</p>
+          <p></p>
         </div>
         <div class="forecast-text">
-          <p class="forecast-temperature">10/15ºC</p>
-          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+          <p class="forecast-temperature"></p>
+          <p class="forecast-day"></p>
         </div>
       </li>
       <li>
         <div class="forecast-icon">
-          <p>🌦</p>
+          <p></p>
         </div>
         <div class="forecast-text">
-          <p class="forecast-temperature">10/15ºC</p>
-          <p class="forecast-day">Viernes, 20 de febrero de 2002</p>
+          <p class="forecast-temperature"></p>
+          <p class="forecast-day"></p>
         </div>
       </li>
     </ul>
-    <div id="location">
-      <p>Salamanca</p>
+    <div id="bar">
+      <button onclick="view.update()">↻</button>
+      <p id="location">Cargando...</p>
     </div>
   </body>
 </html>
