--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" manifest="manifest.appcache">
   <head>
     <title>El tiempo</title>
     <meta charset="utf-8">
